fix tiny typo in 03-Information-Extraction.ipynb

--- a/notebooks/03-Information-Extraction.ipynb
+++ b/notebooks/03-Information-Extraction.ipynb
@@ -249,7 +249,7 @@
     "## Advanced Pattern Matching\n",
     "SpaCy has powerful pattern matching which allows you to match on a list of dictionaries which define attributes for each token. See https://spacy.io/usage/rule-based-matching for spaCy's documentation and examples. Additionally, medspaCy allows matching with regular expressions on the underlying text of the doc.\n",
     "\n",
-    "Let's see some examples of `TargetRules` which utilizie pattern matching. The first rule uses token patterns to match any single token where the lower-case text is either `xrt` or `radiotherapy`. The second uses regular expressions to match various forms of Type 1/Type 2 diabetes."
+    "Let's see some examples of `TargetRules` which utilize pattern matching. The first rule uses token patterns to match any single token where the lower-case text is either `xrt` or `radiotherapy`. The second uses regular expressions to match various forms of Type 1/Type 2 diabetes."
    ]
   },
   {
